--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "newapp",
+  "name": "cardgame",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "cloudinary": "^1.9.1",
+    "cloudinary-core": "^2.4.0",
+    "cloudinary-react": "^1.0.4",
     "cors": "^2.8.4",
-    "custom-react-scripts": "^0.2.1",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
-    "massive": "^4.6.3",
-    "prop-types": "^15.6.0",
+    "massive": "^4.6.0",
+    "material-ui": "^0.20.0",
+    "passport": "^0.4.0",
+    "passport-auth0": "^0.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-loadable": "^5.3.1",
-    "react-player": "^1.1.1",
+    "react-dropzone": "^4.2.3",
     "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.0",
+    "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-promise-middleware": "^5.0.0"
+    "webpack": "^3.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:3005",
+  "main": "server/index.js"
 }
